Prepping for long model train

--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/hamil168/Chatbots/blob/master/Seq2Seq.ipynb)"
+        "[View in Colaboratory](https://colab.research.google.com/github/hamil168/Chatbots/blob/Train-Model-0/Seq2Seq.ipynb)"
       ]
     },
     {
@@ -53,9 +53,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 120
+          "height": 34
         },
-        "outputId": "cb9c8588-193c-4544-a36b-1a436e352139"
+        "outputId": "507d37e0-deee-4125-e997-5d5893771536"
       },
       "cell_type": "code",
       "source": [
@@ -68,12 +68,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'Chatbots'...\n",
-            "remote: Counting objects: 126, done.\u001b[K\n",
-            "remote: Compressing objects: 100% (113/113), done.\u001b[K\n",
-            "remote: Total 126 (delta 70), reused 35 (delta 12), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (126/126), 9.54 MiB | 17.32 MiB/s, done.\n",
-            "Resolving deltas: 100% (70/70), done.\n"
+            "fatal: destination path 'Chatbots' already exists and is not an empty directory.\r\n"
           ],
           "name": "stdout"
         }
@@ -97,7 +92,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "71833751-466b-4e26-cd12-fa245f467313"
+        "outputId": "59ba57a9-ba8f-4c63-938b-99371d52767f"
       },
       "cell_type": "code",
       "source": [
@@ -121,9 +116,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 202
         },
-        "outputId": "4e83616c-0b52-46de-bc56-1ef7effd234a"
+        "outputId": "d4599826-855e-454a-8fef-e744e697e1ba"
       },
       "cell_type": "code",
       "source": [
@@ -131,14 +126,22 @@
         "\n",
         "!git pull https://github.com/hamil168/Chatbots master"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "remote: Counting objects: 3, done.\u001b[K\r\n",
+            "remote: Compressing objects:  33% (1/3)   \u001b[K\rremote: Compressing objects:  66% (2/3)   \u001b[K\rremote: Compressing objects: 100% (3/3)   \u001b[K\rremote: Compressing objects: 100% (3/3), done.\u001b[K\r\n",
+            "remote: Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\r\n",
+            "Unpacking objects:  33% (1/3)   \rUnpacking objects:  66% (2/3)   \rUnpacking objects: 100% (3/3)   \rUnpacking objects: 100% (3/3), done.\r\n",
             "From https://github.com/hamil168/Chatbots\r\n",
             " * branch            master     -> FETCH_HEAD\n",
-            "Already up-to-date.\n"
+            "Updating d20a852..0a6fc06\n",
+            "Fast-forward\n",
+            " colab-initialize.ipynb | 86 \u001b[32m++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\n",
+            " 1 file changed, 86 insertions(+)\n",
+            " create mode 100644 colab-initialize.ipynb\n"
           ],
           "name": "stdout"
         }
@@ -150,9 +153,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 67
         },
-        "outputId": "13f54da9-9482-483b-e49c-433e60d6455e"
+        "outputId": "b3365069-9641-45c8-d33f-863c279aa717"
       },
       "cell_type": "code",
       "source": [
@@ -164,9 +167,9 @@
         {
           "output_type": "stream",
           "text": [
-            "Cornell Movie Script Database EDA.ipynb  Preproc.ipynb  Seq2Seq.ipynb\r\n",
-            "movie_conversations.txt                  preproc.py\r\n",
-            "movie_lines.txt                          README.md\r\n"
+            "colab-initialize.ipynb                   movie_lines.txt  \u001b[0m\u001b[01;34m__pycache__\u001b[0m/\r\n",
+            "Cornell Movie Script Database EDA.ipynb  Preproc.ipynb    README.md\r\n",
+            "movie_conversations.txt                  preproc.py       Seq2Seq.ipynb\r\n"
           ],
           "name": "stdout"
         }
@@ -176,30 +179,14 @@
       "metadata": {
         "id": "IFaioRdhLyFI",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 103
-        },
-        "outputId": "97a04e80-ac91-4d80-a836-085f893aa8fe"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "#!pip install tqdm   ### use later when in .py files"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting tqdm\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7d/e6/19dfaff08fcbee7f3453e5b537e65a8364f1945f921a36d08be1e2ff3475/tqdm-4.24.0-py2.py3-none-any.whl (43kB)\n",
-            "\u001b[K    100% |████████████████████████████████| 51kB 2.5MB/s \n",
-            "\u001b[?25hInstalling collected packages: tqdm\n",
-            "Successfully installed tqdm-4.24.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -207,9 +194,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 70
         },
-        "outputId": "d02490ad-4057-4726-a87b-c9e5cc3e4975"
+        "outputId": "526ae4de-91dd-4dbf-ceaa-68646c1e80e7"
       },
       "cell_type": "code",
       "source": [
@@ -226,7 +213,7 @@
         "\n",
         "graph1 = tf.get_default_graph()"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,15 +727,15 @@
       "cell_type": "code",
       "source": [
         "# Next up: hyper parameters\n",
-        "epochs = 2 #100\n",
-        "batch_size = 10  #64 make bigger to make faster\n",
-        "rnn_size = 32 # 512\n",
-        "num_layers = 1  #3\n",
-        "encoding_embedding_size = 32 #512  # 512 col in embedding matrix\n",
-        "decoding_embedding_size = 32 #512\n",
-        "learning_rate = 0.1 # 0.01\n",
+        "epochs = 100\n",
+        "batch_size = 64 make bigger to make faster\n",
+        "rnn_size = 512\n",
+        "num_layers = 3\n",
+        "encoding_embedding_size = 512  # 512 col in embedding matrix\n",
+        "decoding_embedding_size = 512\n",
+        "learning_rate = 0.01\n",
         "learning_rate_decay = 0.9\n",
-        "min_learning_rate = 0.01 #0.0001\n",
+        "min_learning_rate = 0.0001\n",
         "keep_prob = 0.5\n",
         "keep_probability = 0.5  # based on hinton paper '14'\n",
         "clip= 5"
@@ -878,7 +865,7 @@
         "  # but looks good in command line\n",
         "  #for b_idx in tqdm(len(padded_train_Q_batches)): ### commented out for debugging\n",
         "  \n",
-        "  for b_idx in range(3): #<-- for debugging\n",
+        "  for b_idx in range(len(padded_train_Q_batches)): #<-- for debugging\n",
         "  \n",
         "    # convert the python arrays to numpy arrays\n",
         "    X_batch = np.asarray(padded_train_Q_batches[b_idx])\n",
@@ -903,7 +890,7 @@
         "\n",
         "       \n",
         "    #if(PRINT_ERROR == True and b_idx%100 == 0): \n",
-        "    if(PRINT_ERROR == True and b_idx%2 == 0):\n",
+        "    if(PRINT_ERROR == True and b_idx%100 == 0):\n",
         "      print(\" Bucket {}:\".format(b_idx), \n",
         "          \" | Loss: {}\".format(np.mean(batch_loss)), \n",
         "          \" | Accuracy: {}\".format(np.mean(batch_accuracy)))\n",
@@ -913,7 +900,7 @@
         "  \n",
         "  # Print epoch and CV loss/accuracy:\n",
         "  #if(PRINT_ERROR == True and i%100 == 0):\n",
-        "  if(PRINT_ERROR == True and i%1 == 0):\n",
+        "  if(PRINT_ERROR == True and i%10 == 0):\n",
         "      val_losses = []\n",
         "      val_acc = []\n",
         "      \n",
@@ -942,13 +929,13 @@
         "          \"\\n --->| loss: {} val: {}\".format(np.mean(epoch_loss), np.mean(val_losses)), \n",
         "          \"\\n --->| acc: {} val: {}\".format(np.mean(epoch_accuracy), np.mean(val_acc)))\n",
         "\n",
-        "  #saver.save(session, \"checkpoint/chatbot_{}.ckpt\".format(i))\n",
+        "  saver.save(session, \"checkpoint/chatbot_{}.ckpt\".format(i))\n",
         "    \n",
         "session.close()\n",
         "\n",
         "    "
       ],
-      "execution_count": 148,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
