--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -728,7 +728,7 @@
       "source": [
         "# Next up: hyper parameters\n",
         "epochs = 100\n",
-        "batch_size = 64 make bigger to make faster\n",
+        "batch_size = 32 #64 make bigger to make faster\n",
         "rnn_size = 512\n",
         "num_layers = 3\n",
         "encoding_embedding_size = 512  # 512 col in embedding matrix\n",
@@ -929,7 +929,8 @@
         "          \"\\n --->| loss: {} val: {}\".format(np.mean(epoch_loss), np.mean(val_losses)), \n",
         "          \"\\n --->| acc: {} val: {}\".format(np.mean(epoch_accuracy), np.mean(val_acc)))\n",
         "\n",
-        "  saver.save(session, \"checkpoint/chatbot_{}.ckpt\".format(i))\n",
+        "    tf.train.saver.save(session, \"checkpoint/chatbot_{}.ckpt\".format(i))\n",
+        "    \n",
         "    \n",
         "session.close()\n",
         "\n",
@@ -972,6 +973,32 @@
     {
       "metadata": {
         "id": "fpWXnhU3dN1v",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "outputId": "feab20da-ae69-44f1-8750-7ed72afa2f65"
+      },
+      "cell_type": "code",
+      "source": [
+        "git push -u origin master"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-1446c63ef059>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    git commit -m 'test commit from colab'\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "8vNnvv_MSYU2",
         "colab_type": "code",
         "colab": {}
       },
