Argument fix in prediction definition

--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -1076,7 +1076,39 @@
     "                        rnn_size, num_layers, len(word2count), \n",
     "                        questionswords2int, clip)\n",
     "\n",
-    "    saver = tf.train.Saver()"
+    "    saver = tf.train.Saver()\n",
+    "    \n",
+    "    with tf.Session() as session:\n",
+    "        saver.restore(session, save_path='/PYTHON_VIRTUAL_ENVIRONMENTS/Chatbots/checkpoint/chatbot_5.ckpt')\n",
+    "\n",
+    "        # not sure how to deliver a single entry for predictions\n",
+    "        # keep getting dim error, so I am putting batch size repetition of the user input\n",
+    "        # very hacky\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        tiled_input = np.asarray([user_ints for i in range(batch_size)])\n",
+    "\n",
+    "        feed_dict = {model.inputs:tiled_input,\n",
+    "                     model.targets:np.zeros(tiled_input.shape), \n",
+    "                     model.keep_prob:1, \n",
+    "                     model.decoder_sequence_length:[len(user_ints)]*batch_size,\n",
+    "                     model.encoder_sequence_length:[len(user_ints)]*batch_size}\n",
+    "\n",
+    "        pred = session.run([model.predictions], feed_dict)\n",
+    "        #print(type(pred))\n",
+    "\n",
+    "        invert_dict = inv_map = {v: k for k, v in answerswords2int.items()}\n",
+    "\n",
+    "        text_pred = [invert_dict[p] for p in pred[0][0]]\n",
+    "\n",
+    "        #print(text_pred)\n",
+    "        #print('len: {}'.format(len(text_pred)))\n",
+    "\n",
+    "        text_pred = [w for w in text_pred if not w == '<PAD>']\n",
+    "        response = ' '.join(text_pred)\n",
+    "        #construct sentence\n",
+    "        print(response)"
    ]
   },
   {
@@ -1087,7 +1119,7 @@
    "source": [
     "# Very rough putting together of the above pieces\n",
     "\n",
-    "def get_user_output(batch_size, answerswords2int):\n",
+    "def get_user_output(user_ints, batch_size, answerswords2int):\n",
     "    \n",
     "    user_ints = get_user_input()\n",
     "    #print(user_ints)\n",
@@ -1098,34 +1130,7 @@
     "\n",
     "\n",
     "\n",
-    "        with tf.Session() as session:\n",
-    "            saver.restore(session, save_path='/PYTHON_VIRTUAL_ENVIRONMENTS/Chatbots/checkpoint/chatbot_5.ckpt')\n",
     "\n",
-    "            # not sure how to deliver a single entry for predictions\n",
-    "            # keep getting dim error, so I am putting batch size repetition of the user input\n",
-    "            # very hacky\n",
-    "            tiled_input = np.asarray([user_ints for i in range(batch_size)])\n",
-    "\n",
-    "            feed_dict = {model.inputs:tiled_input,\n",
-    "                         model.targets:np.zeros(tiled_input.shape), \n",
-    "                         model.keep_prob:1, \n",
-    "                         model.decoder_sequence_length:[len(user_ints)]*batch_size,\n",
-    "                         model.encoder_sequence_length:[len(user_ints)]*batch_size}\n",
-    "\n",
-    "            pred = session.run([model.predictions], feed_dict)\n",
-    "            #print(type(pred))\n",
-    "\n",
-    "            invert_dict = inv_map = {v: k for k, v in answerswords2int.items()}\n",
-    "\n",
-    "            text_pred = [invert_dict[p] for p in pred[0][0]]\n",
-    "\n",
-    "            #print(text_pred)\n",
-    "            #print('len: {}'.format(len(text_pred)))\n",
-    "\n",
-    "            text_pred = [w for w in text_pred if not w == '<PAD>']\n",
-    "            response = ' '.join(text_pred)\n",
-    "            #construct sentence\n",
-    "            print(response)\n",
     "            \n",
     "        user_ints = get_user_input()\n",
     "\n",
